# cs296-41honors

./: Links.txt  Plan.txt  README.md
code/: CMakeLists.txt  sine.c  video  video.cpp
code/client/GameX/app/: build.gradle  proguard-rules.pro
code/client/GameX/app/src/androidTest/java/com/example/hashmup/gamex/: ApplicationTest.java
code/client/GameX/app/src/main/: AndroidManifest.xml
code/client/GameX/app/src/main/java/com/example/hashmup/gamex/: MainActivity.java  MainActivityFragment.java
code/client/GameX/app/src/main/res/layout/: activity_main.xml  content_main.xml  fragment_main.xml
code/client/GameX/app/src/main/res/menu/: menu_main.xml
code/client/GameX/app/src/main/res/values/: strings.xml
code/client/GameX/app/src/test/java/com/example/hashmup/gamex/: ExampleUnitTest.java
code/client/android-BluetoothChat/: local.properties
code/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  video  video copy.cpp  video.cpp  video.cpp~
code/video/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  script.sh  video
code/video/src/: audio.h  main.cpp  video.cpp  video.h
